--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^7.3",
         "phpunit/phpunit": "^8",
-        "laravel/framework": "^5.8|^6.0"
+        "laravel/framework": "^5.8|^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
